[tool.poetry]
name = "wordle-guess"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
mypy = "^0.942"
pytest = "^7.1.1"
hypothesis = "^6.43.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
